# AarchGate

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT_GUIDE.md  LICENSE  NOTICE  README.md  build.sh
.docker/: README.md  build.Dockerfile  docker-compose.yml
benchmarks/: CMakeLists.txt  apex_runner_ext.cpp  bench_aarchgate_final.cpp  bench_bit_slicer.cpp  bench_native.cpp  bench_native_rps.cpp  bench_random_forest.cpp  bench_tpch_q6.cpp
bindings/java/: CMakeLists.txt  TestUniversalJava.java  aarchgate_jni.cpp
bindings/java/com/aarchgate/engine/: AarchGateEngine.java
bindings/python/: CMakeLists.txt  aarchgate_pybind.cpp  test_universal_python.py
docs/: BENCHMARK_RESULTS.md  INSTALL.md  SDK_REFERENCE.md  aarchlogic_context.json
examples/trading/: CMakeLists.txt  bench_10b_rps.cpp  bench_10b_rps_debug.cpp  bench_simple.cpp  bench_with_and.cpp  bench_with_sub.cpp  main.cpp  test_hybrid_sdk.cpp  test_universal_logic.cpp
examples/trading/schema/: market_data.fbs
include/apex/: AarchGate.hpp  apex.h  apex_c_api.h  common.hpp  engine.hpp  version.hpp
include/apex/compute/: bit_slicer.hpp  column_buffer.hpp  parallel_runner.hpp
include/apex/core/: registry.hpp  types.hpp
include/apex/gpu/: metal_device.hpp
include/apex/jit/: circuit_library.hpp  compiler.hpp  ir.hpp
include/apex/memory/: data_viewer.hpp  shm_fabric.hpp
research/: Makefile  README.md  metadata.yaml  paper.md  references.bib
research/appendices/: A-B-appendix.md  C-D-appendix.md
research/benchmarks/: bench_jit_logic  bench_jit_logic.cpp  bench_slicer  bench_slicer.cpp
research/benchmarks/results/: benchmark-analysis.md  jit_results.txt  slicer_results.txt
research/figures/: 01-arch-flow.md  02-memory-fabric.md  03-butterfly-logic.md  04-ripple-carry.md  05-microarch-layout.md  06-kogge-stone.md  07-tree-flattening.md  08-eureka-materialization.md  generate_charts.py
research/sections/: 00-abstract.md  01-introduction.md  02-memory-fabric.md  03-bit-slicer.md  04-jit-compiler.md  05-microarch.md  06-gpu-compute.md  07-aarchgate-ml.md  08-aarchgate-eureka.md  09-evaluation.md  10-related-work.md
src/api/: aarchgate_c_api.cpp  api.cpp  engine.cpp
src/compute/: bit_slicer.cpp  bit_slicer_fast.cpp  compute.cpp  parallel_runner.cpp
src/core/: core.cpp  registry.cpp
src/gpu/: metal_device.mm
src/gpu/kernels/: bit_sliced.metal
src/jit/: circuit_library.cpp  compiler.cpp  jit.cpp
src/memory/: memory.cpp
src/telemetry/: telemetry.cpp
tests/: CMakeLists.txt  VerifyZeroCopy.java  test_bit_slicer_transpose.cpp  test_infrastructure_audit.cpp  test_memory_fabric.cpp  test_metal_bridge.cpp  test_metal_throughput.cpp  test_ml_inference.cpp  test_registry.cpp  test_sdk_iot.cpp  test_universal_cxx.cpp  test_zero_copy_shm.cpp  verify_zero_copy.py
